syntax = "proto3";

option java_package = "com.SmartWatchgRPC";

service recordActivity{
}

service trackLocation{
}

service pairEquipment{
}

