syntax = "proto3";

option java_package = "com.SmartWatchgRPC";

// Messaging Service
service Messaging{

	// rpc to check for new messages
	rpc checkMessages(Empty) returns (stream Message);
	
	// rpc to send a new message
	rpc sendMessage(Message) returns (messageConfirmation);
	
	// rpc to search old messages with a string
	rpc searchMessages(searchKey) returns (stream Message);
}

message Message {
  string message = 1;
  
}

message messageConfirmation {
  bool confirmation = 1;

}

message Empty {
}

message searchKey {
  string searchKey = 1;

}

message searchResults {
  repeated string messages = 1;

}






